<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statisticsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".fragments.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/txv_avatarsObtained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txv_avatarsObtained"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_kakashi"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/img_avatar_description"
        android:src="@drawable/kakashi_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <ImageView
        android:id="@+id/img_Itachi"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/img_avatar_description"
        android:src="@drawable/itachi_9"
        app:layout_constraintEnd_toStartOf="@+id/img_kakashi"
        app:layout_constraintStart_toEndOf="@+id/img_hinnata"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <ImageView
        android:id="@+id/img_hinnata"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/img_avatar_description"
        android:src="@drawable/hinnata_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <TextView
        android:id="@+id/txv_itachiname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/itachi_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txv_hinnataName"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <TextView
        android:id="@+id/txv_hinnataName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hinata_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_hinnata" />

    <ImageView
        android:id="@+id/img_sasuke"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="112dp"
        android:contentDescription="@string/img_avatar_description"
        android:src="@drawable/sasuke_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <ImageView
        android:id="@+id/img_naruto"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img_avatar_description"
        android:src="@drawable/naruto_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <TextView
        android:id="@+id/txv_narutoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/naruto_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_naruto" />

    <TextView
        android:id="@+id/txv_sasukeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sasuke_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sasuke" />

    <TextView
        android:id="@+id/txv_kakashiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/kakashi_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txv_itachiname"
        app:layout_constraintTop_toBottomOf="@+id/img_kakashi" />

    <Spinner
        android:id="@+id/spinner_tables"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinner_dates"
        app:layout_constraintTop_toBottomOf="@+id/img_sasuke" />

    <Spinner
        android:id="@+id/spinner_dates"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sasuke" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        app:columnCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_mistakes"
        app:rowCount="5">

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txv_mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/mistakes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dates" />

    <TextView
        android:id="@+id/txv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/success"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dates" />

    <ProgressBar
        android:id="@+id/pgb_percentageSuccess"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="68dp"
        android:progressDrawable="@drawable/circle_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dates" />

    <TextView
        android:id="@+id/txv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pgb_percentageSuccess"
        app:layout_constraintEnd_toEndOf="@+id/pgb_percentageSuccess"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/pgb_percentageSuccess"
        app:layout_constraintTop_toTopOf="@+id/pgb_percentageSuccess"
        app:layout_constraintVertical_bias="0.485" />

    <Spinner
        android:id="@+id/spinner_users"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="78dp"
        app:layout_constraintStart_toEndOf="@+id/txv_avatarsObtained"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>