<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/addUserDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logoPasswordDialog"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:contentDescription="@string/img_avatar_description"
            android:src="@drawable/appicon"
            app:srcCompat="@drawable/appicon"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tittle_passwordAddUser"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_passwordAddUser"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txv_tittleAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tittle_addUserDialog"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="114dp" />

        <EditText
            android:id="@+id/edt_addUserDialog"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="Nombre"
            android:inputType="text"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="146dp" />

        <Button
            android:id="@+id/btn_addUserDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_500"
            android:text="@android:string/ok"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="205dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>